# trip-planner

./: .gitignore  AGENTS.md  README.md  china-planner.md  seed.tsv
backend/: Cargo.toml
backend/bindings/: Accommodation.ts  AuthUser.ts  ChecklistEditor.ts  ChecklistItem.ts  City.ts  CreateAccommodation.ts  CreateChecklistItem.ts  CreateCity.ts  CreateDay.ts  Day.ts  Tips.ts  ToggleCheckBody.ts  UpdateAccommodation.ts  UpdateChecklistItem.ts  UpdateCity.ts  UpdateDay.ts  UpdateTips.ts  UploadResponse.ts
backend/migrations/: 20240101000000_initial.sql  20240101000001_city_coords.sql  20240101000002_city_description.sql  20240101000003_city_tagline.sql  20240101000004_day_tagline.sql  20240101000005_day_travel.sql  20240101000006_checklist.sql  20240101000007_tips.sql
backend/src/: db.rs  error.rs  lib.rs  main.rs
backend/src/auth/: mod.rs
backend/src/models/: mod.rs
backend/src/routes/: accommodations.rs  checklist.rs  cities.rs  days.rs  export.rs  mod.rs  tips.rs  upload.rs
backend/tests/: api_tests.rs
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: accommodations.spec.ts  cities.spec.ts  days.spec.ts  export.spec.ts  globalSetup.ts  helpers.ts  home.spec.ts  navigation.spec.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts  bgMusic.ts  cityColors.ts  format.ts  router.ts  types.ts
frontend/src/lib/__tests__/: api.test.ts  format.test.ts  router.test.ts
frontend/src/lib/components/: Home.svelte  (+20 more)
seed/: accommodations.tsv  checklist_items.tsv  cities.tsv  days.tsv  tips.md
