[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
chrono = { version = "0.4.44", features = ["serde"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
csv = "1.4.0"
dotenv = "0.15.0"
futures-util = "0.3.32"
http = "1.4.0"
oauth2 = "5.0.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
axum-test = "19.0.0"

